# geometry-of-wrong-autoresearch

./: .gitignore  AUDIT_PRONTOQA.md  AUTORESEARCH.md  EXCLUSIONS.md  PLAN.md  QUESTION.md  README.md  paper.md  predictions.md  requirements.txt
code/: exp_d1_gate.py  exp_d2_fingerprint_gate.py  exp_reviewer_holdout_permutation.py  rerun_common.py  six_model_rerun.py  stage1_lock_floor.py
geom/: __init__.py  graph.py  ricci.py  spectral.py
results/: 00_curvature_backend_check.json  00_prontoqa_label_audit.json  00_survey.md  01_extract_summary.json  02_label_summary.json  10_d1_indist.json  11_d1_lodo.json  12_d1_composition_shift.json  13_d1_permutation.json  14_d1_robustness_prontoqa_flag.json  15_d1_gbt.json  20_d2_localization.json  20_d2_per_trace.json  21_d2_alignment_audit_sample.json  21b_alignment_audit_manual.json  22_d2_backend_argmin_check.json  23_d2_reference_solver.json  99_selfcheck.md  labels.jsonl
results_prior/: SIX_MODEL_RERUN_20260522_194904.json  rerun_phase1_features_20260518_004610.jsonl  rerun_phase3_stage1_20260518_013157.json
ricci-numpy/: CITATION.cff  README.md  pyproject.toml
ricci-numpy/.github/workflows/: ci.yml
ricci-numpy/benchmarks/: bench.py  sinkhorn_jax.py  sinkhorn_torch.py
ricci-numpy/paper/: paper.bib  paper.md
ricci-numpy/ricci_numpy/: __init__.py  _numba.py  core.py  fast.py
ricci-numpy/tests/: test_canonical.py  test_edge_cases.py  test_fuzz_vs_scipy.py  test_weighted.py
src/: build_labels.py  d1_common.py  d2_reference_argmin.py  extract_all.py  features.py  labels.py  prontoqa_logic.py  run_d1.py  run_d2.py  (+1 more)
(+18 files in other folders)
