[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "ricci-numpy"
version = "0.1.0"
description = "Ollivier-Ricci curvature on graphs in pure numpy, with exact transportation LP."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Arjun Balaji"}]
keywords = ["ollivier-ricci", "graph-curvature", "optimal-transport",
            "wasserstein", "network-simplex", "graph-ml"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = ["numpy>=1.20"]

[project.optional-dependencies]
fast = ["numba>=0.55"]
dev = ["pytest>=7", "numba>=0.55", "scipy>=1.7", "networkx>=2.8"]

[project.urls]
Homepage = "https://github.com/ArjunBalaji79/ricci-numpy"
Source = "https://github.com/ArjunBalaji79/ricci-numpy"
Issues = "https://github.com/ArjunBalaji79/ricci-numpy/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ricci_numpy*"]
